# coding-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  environment-gpu.yml  pyproject.toml  setup.cfg
.github/workflows/: package.yml  pre-commit.yml  pytest.yml  python-package-conda.yml  test.yml
TODO_package_name/: __init__.py
