[project]
name = "TODO_package_name"
version = "0.0.1"
author = "Erin Grant"
url = "https://github.com/eringrant/TODO_package_name"
description = "TODO"

requires-python = ">=3.11"
dependencies = [
  "equinox>=0.12.2",
  # GPU on Linux.
  "jax[cuda12]>=0.4.29 ; sys_platform == 'linux'",
  "nvidia-cublas-cu12>=12.9.0.13 ; sys_platform == 'linux'", # https://github.com/jax-ml/jax/issues/29042
  # CPU everywhere else.
  "jax>=0.4.29 ; sys_platform != 'linux'",
  # No more `jaxlib` support for Intel Macs.
  "jaxlib>=0.4,<0.5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  # Latest versions on Apple Silicon, Windows
  "jaxlib>=0.6.1 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "jaxtyping>=0.3.2",
  "matplotlib>=3.10.3",
  "optax>=0.2.4",
  "optimistix>=0.0.10",
  "treescope>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
target-version = 'py313'

# Rule sets.
select = ["ALL"]
ignore = [
  # Allow `TODO`s.
  "TD003",
  "FIX002",
  # Allow many argument parameters.
  "PLR0913",
  # Allow long functions.
  "PLR0915",
  # Allow magic values.
  "PLR2004",
  # Allow `typing.Any`.
  "ANN401",
  # Allow f-strings in `logging`.
  "G004",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# In/exclude a variety of commonly ignored directories.
include = [
  "pyproject.toml", 
  "*.py", 
  "*.pyi", 
  "*.ipynb",
]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "google"
